--- a/index.html
+++ b/index.html
@@ -128,13 +128,38 @@
 
         <!-- Section: PT Chart -->
         <section id="pt-chart" class="hidden animate-fade-in-up">
-            <div class="flex justify-between items-center mb-6">
-                <h2 class="text-3xl font-bold text-attic-neonBlue">Interactive PT <span
-                        class="text-gray-500 text-lg ml-2">R-410A</span></h2>
-                <button onclick="showDashboard()"
-                    class="px-4 py-2 bg-gray-800 hover:bg-gray-700 text-white rounded-lg transition-colors border border-gray-600">
-                    &larr; Back
-                </button>
+            <div class="flex flex-col md:flex-row justify-between items-start md:items-center gap-4 mb-6">
+                <div>
+                    <h2 class="text-3xl font-bold text-attic-neonBlue">Interactive PT</h2>
+                    <div class="text-gray-500 text-xs font-mono mt-1 uppercase tracking-widest">Diagnostic Companion
+                    </div>
+                </div>
+
+                <div class="flex items-center gap-4 w-full md:w-auto">
+                    <!-- Refrigerant Selector -->
+                    <div class="relative flex-1 md:flex-none">
+                        <select id="ref-selector"
+                            class="w-full md:w-48 bg-attic-panel border border-gray-700 rounded-lg p-3 text-sm font-bold text-[#e76f8e] focus:border-attic-neonBlue focus:outline-none transition-all appearance-none cursor-pointer pr-10 shadow-lg">
+                            <option value="R-410A" style="color: #e76f8e;">R-410A (Rose)</option>
+                            <option value="R-22" style="color: #a0ce4e;">R-22 (Green)</option>
+                            <option value="R-134a" style="color: #4daed0;">R-134a (Blue)</option>
+                            <option value="R-404A" style="color: #f58220;">R-404A (Orange)</option>
+                            <option value="R-32" style="color: #8bb8e8;">R-32 (Sky)</option>
+                        </select>
+                        <div class="absolute right-3 top-1/2 -translate-y-1/2 pointer-events-none text-gray-500">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24"
+                                stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M19 9l-7 7-7-7" />
+                            </svg>
+                        </div>
+                    </div>
+
+                    <button onclick="showDashboard()"
+                        class="px-4 py-3 bg-gray-800 hover:bg-gray-700 text-white rounded-lg transition-colors border border-gray-600 shadow-lg">
+                        &larr;
+                    </button>
+                </div>
             </div>
 
             <!-- Sticky Results Bar -->
@@ -431,28 +456,91 @@
         const shDelta = document.getElementById('sh-delta');
         const scDelta = document.getElementById('sc-delta');
 
-        // PT Data & Logic for R-410A
-        const ptData = [
-            { t: 0, p: 48.0 }, { t: 10, p: 61.8 }, { t: 20, p: 78.4 },
-            { t: 30, p: 97.5 }, { t: 40, p: 118.0 }, { t: 50, p: 142.0 },
-            { t: 60, p: 170.0 }, { t: 70, p: 201.0 }, { t: 80, p: 235.0 },
-            { t: 90, p: 274.0 }, { t: 100, p: 317.0 }, { t: 110, p: 365.0 },
-            { t: 120, p: 418.0 }, { t: 130, p: 476.0 }, { t: 140, p: 541.0 }
-        ];
+        const ptProfiles = {
+            'R-410A': {
+                color: '#e76f8e', // Rose
+                data: [
+                    { t: 0, p: 48.0 }, { t: 10, p: 61.8 }, { t: 20, p: 78.4 },
+                    { t: 30, p: 97.5 }, { t: 40, p: 118.0 }, { t: 50, p: 142.0 },
+                    { t: 60, p: 170.0 }, { t: 70, p: 201.0 }, { t: 80, p: 235.0 },
+                    { t: 90, p: 274.0 }, { t: 100, p: 317.0 }, { t: 110, p: 365.0 },
+                    { t: 120, p: 418.0 }, { t: 130, p: 476.0 }, { t: 140, p: 541.0 }
+                ]
+            },
+            'R-22': {
+                color: '#a0ce4e', // Green
+                data: [
+                    { t: 0, p: 26.3 }, { t: 10, p: 32.8 }, { t: 20, p: 43.1 },
+                    { t: 30, p: 55.0 }, { t: 40, p: 68.3 }, { t: 50, p: 85.4 },
+                    { t: 60, p: 101.6 }, { t: 70, p: 121.4 }, { t: 80, p: 142.9 },
+                    { t: 90, p: 167.0 }, { t: 100, p: 194.2 }, { t: 110, p: 226.4 },
+                    { t: 120, p: 260.0 }, { t: 130, p: 297.0 }, { t: 140, p: 337.5 }
+                ]
+            },
+            'R-134a': {
+                color: '#4daed0', // Blue
+                data: [
+                    { t: 0, p: 6.5 }, { t: 10, p: 12.0 }, { t: 20, p: 18.4 },
+                    { t: 30, p: 26.1 }, { t: 40, p: 35.0 }, { t: 50, p: 45.3 },
+                    { t: 60, p: 57.3 }, { t: 70, p: 70.9 }, { t: 80, p: 86.4 },
+                    { t: 90, p: 103.9 }, { t: 100, p: 123.6 }, { t: 110, p: 145.6 },
+                    { t: 120, p: 170.3 }, { t: 130, p: 197.6 }, { t: 140, p: 227.9 }
+                ]
+            },
+            'R-404A': {
+                color: '#f58220', // Orange
+                data: [
+                    { t: 0, p: 32.6 }, { t: 10, p: 42.4 }, { t: 20, p: 54.5 },
+                    { t: 30, p: 68.4 }, { t: 40, p: 85.4 }, { t: 50, p: 103.0 },
+                    { t: 60, p: 123.0 }, { t: 70, p: 147.0 }, { t: 80, p: 160.1 },
+                    { t: 90, p: 202.0 }, { t: 100, p: 234.6 }, { t: 110, p: 289.0 },
+                    { t: 120, p: 331.0 }, { t: 130, p: 377.0 }, { t: 140, p: 426.0 }
+                ]
+            },
+            'R-32': {
+                color: '#8bb8e8', // Sky
+                data: [
+                    { t: 0, p: 49.3 }, { t: 10, p: 63.5 }, { t: 20, p: 80.0 },
+                    { t: 30, p: 99.1 }, { t: 40, p: 121.0 }, { t: 50, p: 145.9 },
+                    { t: 60, p: 174.1 }, { t: 70, p: 205.8 }, { t: 80, p: 241.5 },
+                    { t: 90, p: 281.3 }, { t: 100, p: 325.7 }, { t: 110, p: 374.9 },
+                    { t: 120, p: 429.3 }, { t: 130, p: 489.4 }, { t: 140, p: 555.7 }
+                ]
+            }
+        };
+
+        let activeRef = 'R-410A';
+        const refSelector = document.getElementById('ref-selector');
 
         function calculatePressure(temp) {
-            for (let i = 0; i < ptData.length - 1; i++) {
-                if (temp >= ptData[i].t && temp <= ptData[i + 1].t) {
-                    const t0 = ptData[i].t;
-                    const p0 = ptData[i].p;
-                    const t1 = ptData[i + 1].t;
-                    const p1 = ptData[i + 1].p;
+            const data = ptProfiles[activeRef].data;
+            for (let i = 0; i < data.length - 1; i++) {
+                if (temp >= data[i].t && temp <= data[i + 1].t) {
+                    const t0 = data[i].t;
+                    const p0 = data[i].p;
+                    const t1 = data[i + 1].t;
+                    const p1 = data[i + 1].p;
                     return p0 + (p1 - p0) * (temp - t0) / (t1 - t0);
                 }
             }
-            if (temp < ptData[0].t) return ptData[0].p;
-            return ptData[ptData.length - 1].p;
+            if (temp < data[0].t) return data[0].p;
+            return data[data.length - 1].p;
         }
+
+        refSelector.addEventListener('change', (e) => {
+            activeRef = e.target.value;
+            const refColor = ptProfiles[activeRef].color;
+
+            // Update UI Colors
+            document.documentElement.style.setProperty('--attic-accent', refColor);
+            refSelector.style.color = refColor;
+            psiReadout.style.color = refColor;
+            psiReadout.style.textShadow = `0 0 15px ${refColor}4d`; // 30% alpha
+            sliderFill.style.backgroundColor = refColor;
+            sliderHandle.style.borderColor = refColor;
+
+            updateSliderUI();
+        });
 
         let currentTemp = 40;
         const tempMin = 0;
